--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,23 @@ Contact: https://themeforest.net/user/regediter
 button i {
 	margin-left: .75rem;
 }
+.button-link{
+	background: none repeat scroll 0 0 #fff;
+    border: 1px solid #d2d2d2;
+    border-radius: 3px;
+    display: inline-block;
+    font-size: 1rem;
+    height: 42px;
+    line-height: 38px;
+    margin-right: 10px;
+    position: relative;
+    text-align: center;
+    -webkit-transition: all 1s ease 0s;
+    -o-transition: all 1s ease 0s;
+    transition: all 1s ease 0s;
+    width: 200px;
+    z-index: 2;
+}
 .btn:hover, .btn:focus{
 	cursor: pointer;
 	background: #940154;
