Added more photos to the gallery at bottom. Added people photos. Changed tags and titles of items in gallery. Changed photo titles for people from numbers to names

--- a/css/style.css
+++ b/css/style.css
@@ -749,6 +749,9 @@ footer h2 {
     height: auto;
     width: 100%;
     margin-bottom: 1.5em;
+		border-style: groove;
+		border-width: 2px;
+		border-color: #D4AF37;
 }
 
 /* 11 Twitter Section
