Updated photos for bridesmaids. Corrected Amy's future lastname. Reorganized sections. Added accomodations section. Updated map with parking garage marker. Updated directions section with note about where to park.

--- a/css/style.css
+++ b/css/style.css
@@ -1515,6 +1515,9 @@ select.form-control:not([size]):not([multiple]) {
 	#event .text-right{
 		text-align: left !important;
 	}
+	#accommodations .text-right{
+			text-align: left !important;
+		}
 
 }
 /* Small devices (landscape phones, 578px and 767px) */
