--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,12 @@ Contact: https://themeforest.net/user/regediter
 24 - Responsive
 ==================================================== */
 
+/* pink de037f
+gold FFDF00
+metalic gold D4AF37
+
+grey font rgba(45, 44, 53, 0.9);
+*/
 
 /* 1 Base CSS
 ==================================================== */
@@ -1019,60 +1025,15 @@ footer h2 {
 
 /* 17 RSVP Section
 ==================================================== */
+
+#rsvp_form {
+  width: 100%;
+  height: 800px;
+	border: 0;
+}
+
 #rsvp h1, #rsvp p{
 	color: #fff;
-}
-.loader{
-	width: 14px;
-	height: auto;
-	margin: 0 10px;
-	display: none;
-}
-.form-success, .form-error{
-	display:none;
-}
-.form-control:focus {
-	background: none repeat scroll 0 0 rgba(255, 255, 255, 0.9);
-    border: 2px solid #d2d2d2;
-    outline: 0 none;
-    -webkit-box-shadow: none;
-            box-shadow: none;
-}
-#rsvp input{
-	height: 52px;
-}
-#rsvp .form-control {
-	background-color: rgba(255,255,255,0.8);
-	border: 1px solid #fff;
-	border-radius: 3px;
-	-webkit-box-shadow: none;
-	        box-shadow: none;
-	color: rgba(45, 44, 53, 1);
-	font-weight: 500;
-	margin-bottom: 15px;
-	font-size: 16px;
-}
-#rsvp .form-group label{
-	color: #fff;
-	font-weight: 300;
-}
-label.error {
-    color: #fff;
-    font-weight: 400;
-}
-label.error:after {
-    position: absolute;
-    content: "!";
-    color: #ff0000;
-    font-size: 1rem;
-    margin-left: 5px;
-    font-weight: 700;
-}
-label {
-	margin-bottom: 1em !important;
-}
-select.form-control:not([size]):not([multiple]) {
-    height: calc(2.25rem + 14px);
 }
 
 
